ipfs/templates/ingress-ipfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: ipfs-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - ipfs-api.ic3.dev
      secretName: ic3-ipfs-tls
  rules:
    - host: ipfs-api.ic3.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipfs-ipfs
                port:
                  number: 5001
